sna: Correct typo in computing damage of PolyPoint

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=38614
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>